# kaggle-playground-lab

./: .gitignore  README.md  pyproject.toml
playground_series/s5_12_Diabetes_Prediction_Challenge/: first_solution.ipynb  ideas.md  xgboost_solution.ipynb
playground_series/s5_12_Diabetes_Prediction_Challenge/eda/: eda.ipynb
